--- a/frontend/restaurant-management-app/src/app/component/customer/dish-list/dish-list.component.html
+++ b/frontend/restaurant-management-app/src/app/component/customer/dish-list/dish-list.component.html
@@ -25,7 +25,7 @@
             <h3 class="types_text">{{ dish.Name }}</h3>
             <p class="looking_text">{{ dish.Price }} VNĐ</p>
             <div style="width: 300px; margin-left: 2px;" class="read_bt">
-              <a class="bt" (click)="addToCart(dish.dishID)">Thêm vào giỏ hàng</a>
+              <a class="bt" (click)="addToCart(dish.DishID)">Thêm vào giỏ hàng</a>
               <a class="bt-1" [routerLink]="['/dish-detail', dish.DishID]">Xem</a>
             </div>
             <br>
